--- a/.github/workflows/run-app.yml
+++ b/.github/workflows/run-app.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install --quiet rich fpdf
+          pip install --quiet rich fpdf azure-identity azure-mgmt-resource
 
       - name: Run FinOps CLI and scripts
         run: |
@@ -27,4 +27,5 @@ jobs:
           bash check-budgets.sh | tee -a "$tmp"
           bash detect-waste.sh | tee -a "$tmp"
           bash generate-recommendations.sh | tee -a "$tmp"
+          python3 azure_login.py | tee -a "$tmp"
           cat "$tmp" >> "$GITHUB_STEP_SUMMARY"
