--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,18 +11,24 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
+      contents: read
+    environment: finazops  # ← This MUST match what you set in PyPI
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
           python-version: '3.x'
+
       - name: Install build tools
-        run: |
-          pip install build
+        run: pip install build
+
       - name: Build package
-        run: |
-          python -m build
-      - name: Publish to PyPI
+        run: python -m build
+
+      - name: Publish to PyPI using trusted publisher
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          password: ${{ secrets.PYPI_API_TOKEN }}
+          # No token/password needed!
+          # OIDC will be used automatically
+          skip-existing: true  # optional
