--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
-    environment: finazops  # ← This MUST match what you set in PyPI
+    environment: finazops
 
     steps:
       - uses: actions/checkout@v3
@@ -29,6 +29,4 @@ jobs:
       - name: Publish to PyPI using trusted publisher
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          # No token/password needed!
-          # OIDC will be used automatically
-          skip-existing: true  # optional
+          skip-existing: true
