--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,14 @@ requires = ["setuptools>=61"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "Franck Kengne"
+name = "finazops"
 
 version = "0.1.0"
 description = "FinOps CLI Toolkit for Azure"
 readme = "README.md"
 requires-python = ">=3.8"
 license = {text = "MIT"}
-authors = [{name="FinOps"}]
+authors = [{name="Franck Kengne"}, email = "2monthscloud@gmail.com"]
 dependencies = [
     "rich",
     "fpdf",
