Add FastAPI server with prompt endpoint

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "azure-identity",
     "azure-mgmt-resource",
     "jinja2",
+    "fastapi",
+    "uvicorn",
 ]
 
 [project.scripts]
